Fixed a bug in the SceneBuilder views. Improved CSS to avoid flickering toolbars and panels.

--- a/com.eco.bio7.themes_/css/e4_default_win7.css
+++ b/com.eco.bio7.themes_/css/e4_default_win7.css
@@ -344,6 +344,10 @@ CTabFolder {
     background-color:  #eeeeee;
 }*/
 
+#org-eclipse-ui-console-ConsoleView.MToolBar {
+    background-color:  #eeeeee;
+}
+
 .ToolItemElement{
     image: url('./win7.png');
     background-color: white #eeeeee #dddddd 25% 25% 50%;
